--- a/Day_004_HW.ipynb
+++ b/Day_004_HW.ipynb
@@ -22,6 +22,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "z4iLB9cKVblV"
    },
    "outputs": [],
@@ -181,15 +182,6 @@
    "source": [
     "new_data.columns"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
