--- a/Day_036_HW.ipynb
+++ b/Day_036_HW.ipynb
@@ -90,17 +90,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F2 score = 0.396\n"
+     ]
+    }
+   ],
+   "source": [
+    "beta = 2\n",
+    "scoreF2 = (1 + beta**2) * (scorePrecision * scoreRecall) / (beta**2 * scorePrecision + scoreRecall)\n",
+    "print(f\"F2 score = {scoreF2:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "beta = 2\n",
-    "scoreF2 = (1 + beta**2) * (scorePrecision * scoreRecall) / (beta**2 * scorePrecision + scoreRecall)\n",
-    "print(f\"F2 score = {scoreF2:.3f}\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
