--- a/Day_037_HW.ipynb
+++ b/Day_037_HW.ipynb
@@ -32,7 +32,7 @@
     "collapsed": true
    },
    "source": [
-    "1.simple linear regression只能預測線性關係的資料。\n",
+    "1.simple linear regression只能預測線性關係的資料。 <br/>\n",
     "2.Logistic Regression不需要基本假設。"
    ]
   },
