--- a/Day_048_HW.ipynb
+++ b/Day_048_HW.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "features = pd.read_csv('./data/kaggle_ml_train.csv', header=None)\n",
@@ -1763,7 +1765,9 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_features = train_data.iloc[:, :40]\n",
@@ -1827,7 +1831,9 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 載入測試資料\n",
@@ -1840,6 +1846,13 @@
     "result_df = pd.DataFrame(result, columns=['Solution'])\n",
     "result_df.index+=1\n",
     "result_df.to_csv('./data/kaggle_ml_testLabel.csv', index_label='Id', header=['Solution'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](img/Day_048.png)"
    ]
   },
   {
